--- a/docker/nginx/app.conf
+++ b/docker/nginx/app.conf
@@ -3,19 +3,16 @@ upstream php-upstream {
 }
 
 server {
-    root /var/www/app/web;
+    root /var/www/app/public;
     listen 80;
     server_tokens off;
 
     location / {
-        try_files $uri @rewriteapp;
+            # try to serve file directly, fallback to index.php
+            try_files $uri /index.php$is_args$args;
     }
 
-    location @rewriteapp {
-        rewrite ^(.*)$ /app.php/$1 last;
-    }
-
-    location ~ ^/(app|app_dev|app_test|config)\.php(/|$) {
+     location ~ ^/index\.php(/|$) {
         fastcgi_pass php-upstream;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
