--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -3,12 +3,14 @@ FROM php:7.1-fpm
 # Install recommended extensions for Symfony
 RUN apt-get update && apt-get install -y \
         libicu-dev \
+        mysql-client \
     && docker-php-ext-install \
         intl \
         opcache \
+        pdo \
+        pdo_mysql \
     && docker-php-ext-enable \
         intl \
-        opcache
-
-# Permission fix
-RUN usermod -u 1000 www-data
+        opcache \
+        pdo \
+        pdo_mysql \
