--- a/app/.env
+++ b/app/.env
@@ -24,5 +24,5 @@ APP_SECRET=5a93c7401a9642e31f11c49d19bbe37a
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:854251@127.0.0.1:3306/wiki
+DATABASE_URL=mysql://root:root@db:3306/wiki
 ###< doctrine/doctrine-bundle ###
