--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,14 @@ services:
       - ./docker/nginx/app.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
       - 8080:80
+  db:
+      image: mysql:5.7
+      environment:
+        MYSQL_DATABASE: wiki
+        MYSQL_USER: root
+        MYSQL_PASSWORD: root
+      ports:
+        - "9906:3306"
 
   composer:
     image: composer:1.4
