--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,19 +1,14 @@
-FROM php:7.1-fpm
+FROM php:7.2-fpm
 
-# Install recommended extensions for Symfony
-RUN apt-get update && apt-get install -y \
-        libicu-dev \
-    && docker-php-ext-install \
-        intl \
-        opcache \
-        pdo \
-        pdo_mysql \
-    && docker-php-ext-enable \
-        intl \
-        opcache \
-        pdo \
-        pdo_mysql \
+RUN apt-get update
+RUN apt-get install -y libicu-dev
 
-RUN curl -sS https://getcomposer.org/installer | php \
-    &&mv composer.phar /usr/local/bin/composer \
-    &&ln -s /usr/local/bin/composer /usr/bin/composer
+
+RUN docker-php-ext-install intl
+RUN docker-php-ext-install pdo
+RUN docker-php-ext-enable pdo
+RUN docker-php-ext-install pdo_mysql
+RUN docker-php-ext-enable pdo_mysql
+
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+RUN apt-get install git -y
